potenitally fixed layout issue?

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@ button{
 }
 .container {
     display: grid;
-    /*gap: 10px;*/
+    width: 100vw;
+    height: 100vh;
     grid-template-columns: 0.75fr 4.25fr;
     grid-template-rows: 1fr 5fr;
 }
@@ -149,7 +150,6 @@ button{
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
-    /*box-shadow: 3px 3px 3px var(--dark-blue);*/
     transition: all 200ms;
 }
 
@@ -159,13 +159,11 @@ button{
 .header{
 display: grid;
 grid-template-rows: 0.5fr 1.5fr;
-height: 140px;
 font-size: large;
 font-weight: 400;
-/* border-radius: 20px; */
 background-color: white;
 color: var(--dark-blue);
-/*box-shadow: 0px 2px 0px  var(--two);*/
+box-shadow: inset 0px -2px 0px  var(--two);
 
 }
 .utility{
@@ -188,15 +186,12 @@ color: var(--dark-blue);
 .sidebar {
 background-color: var(--two);
 grid-area: 2/1/3/2;
-/*border: solid 1px black;*/
 display: grid;
 width: 1fr;
 color: var(--yellow);
 font-size: large;
-/*border-radius: 20px;*/
 text-align: center;
 align-items: center;
-/*box-shadow: 2px 2px 2px 2px var();*/
 }
 
 .sidebar ul li{
@@ -213,42 +208,33 @@ align-items: center;
     background-color: white;
     align-items: center;
     justify-content: center;
+    box-shadow: inset 0px -2px 0px  var(--two);
 }
 
 
 
 .dashboard {
-    /*gap:10px;*/
+    gap:10px;
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
 
 .content{
     display: grid;
-    /*gap: 15px;*/
+    gap: 15px;
     grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
     align-items: center;
     background-color: var(--offwhite);
-    /*box-shadow: inset 0px 2px 0px  var(--two);*/
 }
-
-/*.contentname {
-    grid-column: 1/5;
-    padding: 0;
-    align-content: center;
-}*/
 
 .updatebar{
     display: grid;
-    /*gap: 15px;*/
+    gap: 15px;
     
     width: 1fr;
     background-color: var(--offwhite);
-    /*border-radius: 20px;*/
-    align-items: self-end;
+    align-items: center;
     text-align: center;
-    /*box-shadow: inset 0px 2px 0px  var(--two);*/
-    /*grid-template-rows: 0.5fr 4fr 0.5fr 4fr;*/
 }
 
 .news, .updates {
@@ -257,7 +243,6 @@ align-items: center;
     border-radius: 20px;
     text-align: center;
     border: solid 2px var(--three);
-    /*box-shadow: 6px 6px 6px var(--accent);*/
 }
 
 a {
